# ReadEazeLLMService

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: auth.py  config.py  customLogging.py  main.py  middleware.py  utils.py
app/configs/: handlers.py
app/llm/: llm_factory.py  model_enums.py
app/routes/: chat.py  image.py
app/services/: chat_chain.py  gemini_generator.py  generator_factory.py  image_generator.py  llm.py  memory.py  memoryManager.py  stream_response.py  testGROQ.py
