[project]
name = "readeazellmservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarvesh-10",email = "sarveshsugandh92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "groq (>=0.21.0,<0.22.0)",
    "google-genai (>=1.9.0,<2.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "langchain-core (>=0.3.49,<0.4.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
